[package]
name = "blueshift_anchor_flash_loan"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blueshift_anchor_flash_loan"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"

[dev-dependencies]
litesvm = "0.8.0"
solana-sdk = "3.0.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
tokio = { version = "1.47.1", features = ["full"] }
